# Hackathon2021VibeChecker

./: .env  .gitignore  MEADRE.md  README.md  bot.py  mean_sd_calc.py  plot.py
files/: actual_file.txt  ideas.txt  new_word.txt  words.txt
rust_bot/: Cargo.toml  config.ron  readme.txt
rust_bot/src/: config.rs  main.rs
