[package]
name = "bot"
version = "0.1.0"
authors = ["dylan <dylanhachmann@umail.ucsb.edu>"] #ADD YOUR NAMES BOYOS
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1", features = ["full"] } 	#full is a waste of space,
						#though I dont want to figure
						#out what features are used atm
ron = "0.6"
serde = "1.0.0"
